<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_wtc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.wtc_app.WTC">

    <ImageView
        android:id="@+id/aerial"
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:scaleType="centerCrop"
        android:src="@drawable/aerial2" />

    <ImageView
        android:layout_width="80sp"
        android:layout_height="120sp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Club"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@id/aerial"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:layout_below="@+id/header"
        android:layout_marginTop="16sp"
        android:layout_marginLeft="32sp"
        android:layout_marginRight="16sp"
        android:layout_marginBottom="16sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/header">

            <ImageView
                android:id="@+id/location"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/location"/>

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:autoLink="map"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_toRightOf="@+id/location"
                android:layout_marginLeft="16dp"/>

            <ImageView
                android:id="@+id/phone"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/phone"
                android:layout_below="@id/address"
                android:layout_alignLeft="@id/location" />

            <TextView
                android:id="@+id/tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel"
                android:autoLink="phone"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_marginTop="16dp"
                android:layout_below="@id/address"
                android:layout_alignLeft="@id/address"/>

            <ImageView
                android:id="@+id/web"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/web"
                android:layout_below="@id/tel"
                android:layout_alignLeft="@id/phone"
                />

            <TextView
                android:id="@+id/Website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/web"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_marginTop="16dp"
                android:layout_below="@id/tel"
                android:layout_alignLeft="@id/tel"
                android:autoLink="web">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/Website"
                android:layout_marginTop="16dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/Text" />

        </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
